Implement phase 1